a little better even

--- a/bindu.tex
+++ b/bindu.tex
@@ -255,7 +255,7 @@ vedānta:\\rahasya śravaṇāt\dd{}
 \note[type=source, labelb=399, labele=_399e, nosep]{cf. YSv (PT p. 848): haṭhayogād varauṣadhyāt mudrāsādhanamānataḥ | vanavāsād bahukleśāt tathā mantrādisādhanāt |}
 \app{\lem[wit={ceteri}, alt={haṭha°}]{haṭha}
   \rdg[wit={B,L,U1}]{haṭa°}}\app{\lem[wit={ceteri}]{yogasya}
-  \rdg[wit={N1,N2,D}]{yoga°}} karaṇāt\dd{}   
+  \rdg[wit={D,N1,N2}]{yoga°}} karaṇāt\dd{}   
 \app{\lem[wit={ceteri}]{iḍāpiṅgalayoḥ}
   \rdg[wit={N2,U1}]{iḍāpiṃgalayāḥ}}
 \app{\lem[wit={E,P,U1}]{pavanadhāraṇāt}
@@ -1565,10 +1565,10 @@ etādṛśasya
 \begin{tlate}[p59_01]
   \label{secretofscriptures}%\footnote{Alternatively, if we interpret \textit{dṛṣṭe} not as a past passive participle but as a neuter noun meaning ``perception,'' and take \textit{yasmin} to mean ``in whose,'' the phrase would no longer be a locative absolute construction. Instead, it would become a relative clause modifying ``the king.'' Therefore, one could translate it as: ``\ldots, in whose perception there is no fear of the teacher.''} 
   \noindent
-  This is the secret teaching of the scriptures of yoga in all of the scriptures. Just as the light of a lamp enters into the midst of darkness, his mind enters into the teaching. The king in whose mind there is no deceit and, when seen, there is no fear of a leader, has a purified mind. Who has fame on earth, in whose mind there is trust in good people, who is a king always filled with bliss, at whose side there is an abundance of enchanting objects visible [to all], in the presence of such a king the secret of yoga shall be explained.\footnote{The decision for the \beta-group reading \textit{kathanīyam}, and against the reading of the \alpha-group, which reads \textit{kartavyam}, is based on the following observations: Rāmacandra aims to emphasize the contrast between a suitable and an unsuitable king for his \textit{yogaśāstrarahasya}. In the sentence following verse \uproman{59}.1, Rāmacandra states: ``sāmānyād agre yogo na kathanīyaḥ |'' Here, not only the \beta-group but also the \alpha-group of manuscripts read the gerundive of \sqrt{kath}. The core of Rāmacandra's explanation in this section of the \textit{yogaśāstrarahasya} is the ideal practice for the monarch. Thus, the concluding statement in the last sentence is: \textit{iti cakravartināmakathanam} | In all manuscripts, we again find a word formed from \sqrt{kath}. Although the reading of the \alpha-group also works well, the reading of the \beta-group appears to be the original, especially since \textit{kartavyam} could be a scribal error that crept into the transmission early on. This is because \textit{kartavyam} is a word Rāmacandra uses very frequently, and like \textit{kathanīyam}, it begins with \textit{ka} and ends with \textit{yam}. Thus, a scribe who is tired or whose concentration has waned towards the end of copying the text could easily make this mistake.} %\footnote{The prominent instruction that yoga should be practised where there is good governance is frequently found in the literature of Haṭha and Rājayoga. See, for example, \emph{Haṭhapradīpikā} 1.12ab (\textit{surājye dharmike deśe subhikṣe nirupadrave} |). The passage presented here by Rāmacandra contains a detailed description of a ruler under whose reign this \textit{yogarahasya} should be taught. Rāmacandra probably was inspired by the following verse from the \emph{Yogasvarodaya}: \textit{surājani samāśritya karttavyo nirupadrave} | (cf. sources). Notably, Rāmacandra emphasizes this aspect. His phrase ``etādṛśasya rājño 'gre yogarahasyaṃ karttavyaṃ'' with the adverb \textit{agre} suggests the king’s immediate presence, almost reminiscent of the famous yoga demonstrations for the king by courtiers under the supervision of Tirumalai Krishnamacharya.}\footnote{The \beta-group reads \textit{kathanīyam} or \textit{kathyate} instead of \textit{kartavyam}. This indicates that indicate that the \beta-group understood the passage with a slight difference: ``In front of such a king, the secret of yoga is taught.''}
+  This is the secret teaching of the scriptures of yoga in all of the scriptures. Just as the light of a lamp enters into the midst of darkness, his mind enters into the teaching. The king in whose mind there is no deceit and, when seen, there is no fear of a leader, has a purified mind. Who has fame on earth, in whose mind there is trust in good people, who is a king always filled with bliss, at whose side there is an abundance of enchanting objects visible [to all], in the presence of such a king the secret of yoga shall be explained.\footnote{The decision for the \beta-group reading \textit{kathanīyam}, and against the reading of the \alpha-group, which reads \textit{kartavyam}, is based on the following observations: Rāmacandra aims to emphasize the contrast between a suitable and an unsuitable king for his \textit{yogaśāstrarahasya}. In the sentence following verse \uproman{59}.1, Rāmacandra states: \textit{sāmānyād agre yogo na kathanīyaḥ} | Here, not only the \beta-group but also the \alpha-group of manuscripts read the gerundive of √\textit{kath}. The core of Rāmacandra's explanation in this section of the \textit{yogaśāstrarahasya} is the ideal practice for the monarch. Thus, the concluding statement in the last sentence is: \textit{iti cakravartināmakathanam} | In all manuscripts, we again find a word formed from √\textit{kath}. Although the reading of the \alpha-group also works well, the reading of the \beta-group appears to be the original, especially since \textit{kartavyam} could be a scribal error that crept into the transmission early on. This is because \textit{kartavyam} is a word Rāmacandra uses very frequently, and like \textit{kathanīyam}, it begins with \textit{ka} and ends with \textit{yam}. Thus, a scribe who is tired or whose concentration has waned towards the end of copying the text could easily make this mistake.} %\footnote{The prominent instruction that yoga should be practised where there is good governance is frequently found in the literature of Haṭha and Rājayoga. See, for example, \emph{Haṭhapradīpikā} 1.12ab (\textit{surājye dharmike deśe subhikṣe nirupadrave} |). The passage presented here by Rāmacandra contains a detailed description of a ruler under whose reign this \textit{yogarahasya} should be taught. Rāmacandra probably was inspired by the following verse from the \emph{Yogasvarodaya}: \textit{surājani samāśritya karttavyo nirupadrave} | (cf. sources). Notably, Rāmacandra emphasizes this aspect. His phrase ``etādṛśasya rājño 'gre yogarahasyaṃ karttavyaṃ'' with the adverb \textit{agre} suggests the king’s immediate presence, almost reminiscent of the famous yoga demonstrations for the king by courtiers under the supervision of Tirumalai Krishnamacharya.}\footnote{The \beta-group reads \textit{kathanīyam} or \textit{kathyate} instead of \textit{kartavyam}. This indicates that indicate that the \beta-group understood the passage with a slight difference: ``In front of such a king, the secret of yoga is taught.''}
 \end{tlate}
     \begin{tlate}[59_1]
-      \paragraph{\uproman{59}.1 } Not because of affection, fear, delusion, wealth, strength, friendship, donations, beauty, not because of service,\ldots\footnote{So far, I have not been able to identify the source of this verse. However, the transition from verse to prose suggests that Rāmacandra might have written the verse himself.}\\\\
+      \paragraph{\uproman{59}.1 } Not because of affection, fear, delusion, wealth, strength, friendship, donations, beauty, not because of service, \ldots\footnote{So far, I have not been able to identify the source of this verse. However, the transition from verse to prose suggests that Rāmacandra might have written the verse himself.}\\\\
     \end{tlate}
     \flushpage
   \end{translation}
@@ -2733,7 +2733,7 @@ iti
   translation[class="translation"],
   ]
   \begin{edition}
-    \begin{prose}[p59_06]
+\begin{prose}[p59_06]
 %-----------------------------
 %iti śrīsarvaguṇasampannapaṃḍita-sukhānandamiśrasūrisūnupaṇḍita-jvālāprasādamiśrakṛtabhāṣāṭīkāsahito rājayoge binduyogaḥ samāptaḥ// śubhamastu//śrīrastu// \E
 %iti śrīrāmacaṃdraparamahaṃsa viracitas tatvabinduyogasamāptaḥ saṃvat 1867 pauṣakṛṣṇaḥ 12 ravau śubham bhuyāt //??//\P
@@ -2754,7 +2754,7 @@ iti
 %\rdg[wit={D}]{iti paramahaṃsyāṃ śrī rāmacaṃdraviracitāyāṃ tatvayogabiṃdu samāptaḥ || śubham astu | saṃvat 1841 || bhādau śudha 15 lī 0 ve sarva śake rā rāma rāma cha} %check
 %\rdg[wit={U1}]{iti śrī pāramahaṃsyāṃ śrī rāmacaṃdraviracitāyāṃ tatvayogaviduḥ samāptaḥ śubhaṃ bhūyāt || || atarlakṣyaṃ bahi dṛḍhir nirmeṣomeṣa varjitaḥ saiṣāśāṃbhavīmudrā sarvata,n treṣugopitā 1 aṃtark ..... } %check
 %\rdg[wit={U2}]{iti śrī rāmacaṃdraparamahaṃsaviracitas tatvabiṃduyogasamāptaḥ || śrī śubhaṃ bhavatu || śrīsītārāmārpaṇamastuḥ || idaṃ pustakaṃ || śake 1805 || vikramārka saṃmat || 1140 || jayanām asaṃvatsare || udagayaṇe || griṣmaṛtau? || vaiśālhemāse || kṛṣṇapakṣe || tithau 23 || bhānuvāsare || prathamayāmye || śrī kṣetra avaṃtikāyāṃ || śrī mahārudramahākālasaṃnidhāne na saṃpūrṇaṃ || lekhanaṃ ānaṃt? suta bābājoo rājadherakareṇa likhyate || yādṛśaṃ pustakaṃ dṛṣtvā tādṛsaṃ likhitaṃ mayā || yadi śuddhaṃ aeśuddho cā mama doṣo na dīyate ||1|| śrīrāma || cha ||}}\dd{}
-      \linelabel{_abazaba1}
+  \linelabel{_abazaba1}
 \noindent iti śrīrāmacandraparamahaṃsaviracitas-yogatattvabinduḥ samāptaḥ |\linelabel{_abazaba2}
 \note[type=philcomm, labelb=_abazaba1, labele=_abazaba2, lem={iti śrīrāmacandraparamahaṃsaviracitas yogatattvabinduḥ samāptaḥ}]{The manuscripts and printed edition offer the following colophons with diverging variants of the title: \\
 
