--- a/intro.tex
+++ b/intro.tex
@@ -3054,28 +3054,28 @@ The term Satyayoga, the ``true Yoga'' appears in the \emph{Yogatattvabindu} in \
 
 The concept of Sahajayoga is closely linked in literature with that of the Avadhūta in the classical sense. The typical Avadhūta has cast off \textit{saṃsāra} and scorns worldly and religious activities. This figure is usually associated with \textit{nirguṇa bhakti}, the worship of the formless Divine. Instead of engaging in complex spiritual practices, he dedicates himself, if at all, to the only true practice, which is the repetition of the Divine name.\footnote{\citeauthor[2011: 15]{mallinsonnath}.}
 
-The model of the Avadhūta that emerges in Rāmacandra's \emph{Yogatattvabindu} continues a trend that \citeauthor{pudi2023} (2023: 18) calls the ``sanitization'' of the Avadhūta. In her study, she describes the term's historical development and identifies a clear development. Over the centuries, the Avadhūta, the original antinomian ascetic, was gradually integrated into the Brahmanical \emph{āśrama} system. His antinomian behaviour, unconventional traits, and unorthodox practice were tamed, and according to Kanamarlapudi, the Avadhūta became a legitimate and eventually even the highest class of the \textit{saṃnyāsa āśrama}.
+The model of the Avadhūta that emerges in Rāmacandra's \emph{Yogatattvabindu} continues a trend that \citeauthor{pudi2023} (2023: 18) calls the ``sanitisation'' of the Avadhūta. In her study, she describes the term's history and identifies a clear development. Over the centuries, the Avadhūta, the original antinomian ascetic, was gradually integrated into the Brahmanical \emph{āśrama} system. His antinomian behaviour, unconventional traits, and unorthodox practice were tamed, and according to Kanamarlapudi, the Avadhūta became a legitimate and eventually even the highest class of the \textit{saṃnyāsa āśrama}.
 
-Ein Aspekt dieser Entwicklung ist beispielsweise parallel in der frühen Geschichte Haṭhayoga zu beobachten. \citeauthor{mallinsonnath} (2011: 17) stellt fest, dass in der frühen Geschichte des dem Gorakṣa zugeschriebenen Haṭhayoga (11. - 13. Jh.) ``the antinomian external practices of Tantra were internalized and, together with the visualizational techniques of \textit{kuṇḍalinīyoga}, were melded with the physical practices of early Haṭha Yoga, whose original aim was the sublimation of sexual continence into liberation.''
+An aspect of this development can be observed, for example, in the early history of Haṭhayoga. \citeauthor{mallinsonnath} (2011: 17) notes that in the early history of Haṭhayoga attributed to Gorakṣa (11th - 13th centuries), ``the antinomian external practices of Tantra were internalised and, together with the visualisation techniques of \textit{kuṇḍalinīyoga}, were melted with the physical practices of early Haṭha Yoga, whose original aim was the sublimation of sexual continence into liberation.''
 
-Rāmacandra's continues the trend of sanitization and refines the Avadhūta for royal adoption. The Avadhūta becomes the the ideal type of the Rājayoga-practicing \emph{kṣatriya} or king. Rāmacandra cuts off the last threads of the image of Avadhūta that is still connected to the antinomian ascetic.\footnote{Cf. \emph{Yogatattvabindu} \uproman{44} p.\pageref{avadhuta}.} On the contrary, Rāmacandra's Avadhūta does not scorn worldly activity; rather, he is indifferent to it yet fully involved in it and extremely positive towards worldly pleasures. The natural consequence is that Rāmacandra elevates Sahajayoga to the practice \textit{par excellence} for a king, as will be explained in detail below.  
+Rāmacandra continues the trend of sanitisation and refines the Avadhūta for royal adoption. The Avadhūta becomes the ideal type of the Rājayoga-practicing \emph{kṣatriya} or king. Rāmacandra cuts off the last threads of the image of Avadhūta that is still connected to the antinomian ascetic.\footnote{Cf. \emph{Yogatattvabindu} \uproman{44} p.\pageref{avadhuta}.} On the contrary, Rāmacandra's Avadhūta does not scorn worldly activity; rather, he is indifferent to it yet fully involved in it and extremely positive towards worldly pleasures. The natural consequence is that Rāmacandra elevates Sahajayoga to the practice \textit{par excellence} for a king.  
 
-Rāmacandra defines Sahajayoga, the ``natural yoga'', at the end of his text in section \uproman{59}. This section is presented as the ``secret teaching of the scriptures of yoga in all scriptures.'' This secret is explicitly directed at kings.\footnote{Cf. \emph{Yogatattvabindu} \uproman{59}: \textit{yasya rājño manomadhye kapaṭaṃ nāsti} | \textit{yasmin dṛṣṭe deśakasya trāso na bhavati} | \textit{yasya manaḥ śuddhaṃ bhavati} | \textit{yasya pṛthivyāṃ kīrtir bhavati} | \textit{yasya manomadhye satpuruṣavacanaviśvāso bhavati} | \textit{yo rājā sadānandapūrṇo bhavati} | \textit{yasya pārśve pratyakṣam anekaṁ manohārivastūni bhavanti} | \textit{etādṛśasya rājño 'gre yogarahasyaṃ kartavyaṃ} |} In short, Rāmacandra declares that this secret of yoga should only be revealed to a king whose mind is free from deceit, who does not fear the teacher, who trusts in noble words, is always filled with happiness, and is surrounded by enchanting things, etc.
+Rāmacandra defines Sahajayoga, the ``natural yoga'', at the end of his text in section \uproman{59}. This section is presented as the ``secret teaching of the scriptures of yoga in all scriptures.'' This secret is explicitly directed at kings, princes or aristocrats at the royal court\footnote{Cf. \emph{Yogatattvabindu} \uproman{59}: \textit{yasya rājño manomadhye kapaṭaṃ nāsti} | \textit{yasmin dṛṣṭe deśakasya trāso na bhavati} | \textit{yasya manaḥ śuddhaṃ bhavati} | \textit{yasya pṛthivyāṃ kīrtir bhavati} | \textit{yasya manomadhye satpuruṣavacanaviśvāso bhavati} | \textit{yo rājā sadānandapūrṇo bhavati} | \textit{yasya pārśve pratyakṣam anekaṁ manohārivastūni bhavanti} | \textit{etādṛśasya rājño 'gre yogarahasyaṃ kathanīyam} |} In short, a good king is characterised by being being honest, fearless, reputable, trusting of good people, always blissful, and he is surrounded by enchanting objects.
 
 Then Rāmacandra explains to whom this secret should explicitly not be revealed: not to those who blame others, criticise, misbehave, do not speak the truth, lack compassion, and enjoy conflict.\footnote{Cf. ibid. \uproman{59}: \textit{yaḥ paranindā rato bhavati} | \textit{dūrācāro bhavati} | \textit{bhrātumitrasya ca yogyaṃ vastu na dadāti} | \textit{yo satyaṃ na vati} | \textit{yo yogināṃ manomadhye nindāṃ karoti} | \textit{yasya manomadhye dayā na bhavati} | \textit{yaḥ kalahapriyo bhavati} | \textit{svakāryakaraṇe sāvadhāno bhavati} | \textit{guroḥ kāryakaraṇe 'nādito bhavati} | \textit{etādṛśasyāgre na yogaḥ kriyate na paṭhyate} |}
 
-Finally, Rāmacandra reveals the secret teaching. The secret teaching describes the person who embodies the highest reality. This person is free from existence and non-existence (\textit{bhāvābhāvavinirmuktaḥ}).\footnote{This statement implies a characterisation of the highest reality (\textit{tattva}), which in \emph{Amanaska} 2.62 is described as free from the duality of existence and non-existence: \textit{bhāvābhāvadvayātītaṃ svapnajāgaraṇātigam} | \textit{mṛtyujīvananirmuktaṃ tattvaṃ tattvavido viduḥ} || 62 || ``The knowers of the highest reality know that the highest reality is beyond the duality of existence and non-existence, passes beyond [both] sleep and waking and is free from dying and living.'' (Translated by \citeauthor{birch2013}: 318).} And although this person is constantly exposed to worldly pleasures, they are free from all attachments. This person is a yogin made of perpetual bliss (\textit{sadānandamayo yogī}) and practices constant equanimity towards happiness and sorrow. The person has realised the indivisible highest self and performs actions without personal desires or attachments.\footnote{Cf. ibid. \uproman{59}.1-8.}
+Finally, Rāmacandra reveals his secret teaching of yoga. The secret teaching describes the person who embodies the highest reality. This person is free from existence and non-existence (\textit{bhāvābhāvavinirmuktaḥ}).\footnote{This statement implies a characterisation of the highest reality (\textit{tattva}), which in \emph{Amanaska} 2.62 is described as free from the duality of existence and non-existence: \textit{bhāvābhāvadvayātītaṃ svapnajāgaraṇātigam} | \textit{mṛtyujīvananirmuktaṃ tattvaṃ tattvavido viduḥ} || 62 || ``The knowers of the highest reality know that the highest reality is beyond the duality of existence and non-existence, passes beyond [both] sleep and waking and is free from dying and living.'' (Translated by \citeauthor{birch2013}: 318).} And although this person, viz. the king, as the enjoyer of the earth, is constantly exposed to worldly pleasures, he is free from all attachments. This person is a yogin made of perpetual bliss (\textit{sadānandamayo yogī}) and practices constant equanimity towards happiness and sorrow. The person has realised the indivisible highest self and performs actions without personal desires or attachments.\footnote{Cf. ibid. \uproman{59}.1-8.}
 
-While an ordinary person must first stabilise the gaze (\textit{dṛṣṭiḥ sthirā kartavyā}), stabilise the sitting posture (\textit{āsanaṃ dṛḍhaṃ kartavyaṃ}), and stabilise the breath (\textit{pavanaḥ sthiraḥ kartavyaḥ}) to achieve this state, a perfected person no longer needs to adhere to this discipline (\textit{etādṛśaḥ kaścin niyamaḥ siddhasya noktaḥ}).
+While an ordinary person must first stabilise the gaze (\textit{dṛṣṭiḥ sthirā kartavyā}), stabilise the sitting posture (\textit{āsanaṃ dṛḍhaṃ kartavyaṃ}), and stabilise the breath (\textit{pavanaḥ sthiraḥ kartavyaḥ}) to achieve this state, a perfected person no longer needs to adhere to this discipline (\textit{etādṛśaḥ kaścin niyamaḥ siddhasya noktaḥ} |).
 \begin{quote}
-  \textit{manaḥpavanābhyāṃ yadā sahajānandaḥ svasvarūpeṇa prakāśyate} | \textit{sa sahajayogaḥ kathyate} | \textit{rājayogamadhye iti cakravartī nāmakathanaṃ} |
+  \textit{manaḥpavanābhyāṃ yadā sahajānandaḥ svasvarūpeṇa prakāśyate} | \textit{sa sahajayogaḥ kathyate rājayogamadhye} | \textit{iti cakravartināmakathanaṃ} |
 \end{quote}
 
 \begin{quote}
-  When by means of mind and breath the natural bliss appears through ones own true nature, it is called Sahajayoga (``natural yoga''). Among [the methods] of Rajayoga, it is referred to by the name of ``Universal Ruler''.
+ When by means of mind and breath, the natural bliss appears through one's own true nature, it is called Sahajayoga (``natural yoga'') [in this system] of Rajayoga. This is the explanation for those named \textit{cakravartin} (``Universal Ruler'').
 \end{quote}
 
-That is the core message of the secret of yoga in all scriptures. It recalls the \textit{rājaguhyam} of the Mokṣopaya, a teaching through which rulers could attain a state free from suffering.\footnote{Cf. \emph{Mokṣopaya} 2.11.10-17.\nocite{moskopaya12}} These words conclude Rāmacandra's \emph{Yogatattvabindu}. Sahajayoga is referred to as \textit{cakravartī} (``Universal Ruler'').\footnote{In light of this statement, one might wonder why the fifteen yogas place Rājayoga at their final position, given that the fifteen yogas are already presented as methods of Rājayoga. In my opinion, considering these explanations, Sahajayoga should be placed at the top. Indeed, it should be considered that this could be an early error in the transmission.} That indicates that while Sahajayoga still belongs to the category of Rājayoga, at this point, Rājayoga must primarily be understood as ``Yoga for Kings,'' with Sahajayoga being the undisputed supreme ruler within this category. For a king who rules and enjoys the amenities of this position, this is the aspired state, the ultimate. As a \textit{kṣatriya}, he can maintain the soteriological state of salvation through Sahajayoga and continue fulfilling his caste duties without continuous practice. The duties of a ruler sometimes involve ``cruel'' actions, such as enforcing laws, possibly through war. Additionally, Sahajayoga enables the king, despite being an ``enjoyer of the earth,'' to achieve soteriological completion without the deprivations typical for ascetics.\footnote{See also \citeauthor[2006: 121]{hanneder2006}.} The term \textit{sahaja°} in this context thus primarily means natural but in the sense of ``preserving its original nature'' and ``not undergoing further change.''\footnote{Cf. \citetitle[1858: 99]{petersburger7}.}
+That is the core message of the secret of yoga in all scriptures. It recalls the \textit{rājaguhyam} of the Mokṣopaya, a teaching through which rulers could attain a state free from suffering.\footnote{Cf. \emph{Mokṣopaya} 2.11.10-17.\nocite{moskopaya12}} These words conclude Rāmacandra's \emph{Yogatattvabindu}. Thus, Sahajayoga is the ideal yoga for a king. For a king who rules and enjoys the amenities of this position, this is the aspired state, the ultimate. As a \textit{kṣatriya}, he can maintain the soteriological state of salvation through Sahajayoga and continue fulfilling his caste duties without continuous practice. The duties of a ruler sometimes involve ``cruel'' actions, such as enforcing laws, possibly through war. Additionally, Sahajayoga enables the king, despite being an ``enjoyer of the earth,'' to achieve soteriological completion without the deprivations typical for ascetics.\footnote{See also \citeauthor[2006: 121]{hanneder2006}.} The term \textit{sahaja°} in this context thus primarily means natural but in the sense of ``preserving its original nature'' and ``not undergoing further change.''\footnote{Cf. \citetitle[1858: 99]{petersburger7}.} 
 
 \section{Conclusion}
 \label{comparisonconclusion}
