started with description of apparatus

--- a/babel-iast/babel-iast.sty
+++ b/babel-iast/babel-iast.sty
@@ -119,6 +119,11 @@
 % numbers
 \babelprehyphenation{iast}{([0123456789])}{string = {1|0123456789|०१२३४५६७८९},}
 
+
+\hyphenation{
+rā-ja-yo-gaḥ
+}
+
 % punctuation
 \babelprehyphenation{iast}{[./]}{string = ।,}
 \babelprehyphenation{iast}{[:]}{string =  –,}
