--- a/bindu.bib
+++ b/bindu.bib
@@ -10,6 +10,122 @@
 keywords       = {seclit}, 
 }
 
+@article{huson2004,
+  author    = {Daniel H. Huson and Mike Steel},
+  title     = {Phylogenetic trees based on gene content},
+  journal   = {Bioinformatics},
+  year      = {2004},
+  volume    = {20},
+  number    = {13},
+  doi       = {10.1093/bioinformatics/bth198},
+  publisher = {Oxford University Press},
+  address   = {Oxford},
+  url       = {https://doi.org/10.1093/bioinformatics/bth198},
+  note      = {Center for Bioinformatics (ZBIT), Tübingen University, Sand 14, 72076 Tübingen, Germany and Biomathematics Research Centre, University of Canterbury, Christchurch, New Zealand},
+  keywords  ={seclit},
+}
+
+@article{sandra2003,
+   title={Phylogeny for the faint of heart: a tutorial},
+   author={Baldauf, Sandra L.},
+   year={2003},
+   series={Trends in Genetics},
+   volume={19},
+   number={6},
+   pages={345-351},
+   publisher={Researchgate},
+   url={https://www.researchgate.net/publication/10712132_Phylogeny_for_the_faint_of_heart_A_tutorial},
+   keywords={seclit},
+}
+
+@article{nei1987, 
+author={Naruya, Saitou and Nei, Masatoshi}, 
+title={The Neighbor-Joining Method: A New Method for Reconstructing Phylogenetic Trees}, 
+year={1987},
+journal={Molecular Biology and Evolution},
+volume={4(4)},
+pages={406-425},
+doi={doi.org/10.1093/oxfordjournals.molbev.a040454},
+keywords={seclit},
+} 
+
+@book{cormen2009introduction,
+  author    = {Cormen, Thomas H. and Leierson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+  title     = {Introduction to Algorithms},
+  edition   = {3rd},
+  year      = {2009},
+  publisher = {MIT Press},
+  address   = {Cambridge, MA},
+  keywords  = {seclit}, 
+}
+
+@article{huson2022,
+   title={User Manual for SplitsTree4 V4.18.2},
+   author={Huson, Daniel H. and Bryant, David},
+   year={2022},
+   url={https://software-ab.informatik.uni-tuebingen.de/download/splitstree4/manual.pdf},
+   keywords={seclit},
+}
+
+@article{maas2009stemma, 
+ title={Computer Aided Stemmatics — The Case of Fifty-Two Text Versions of Carakasaṃhitā Vimānasthāna 8.67-157}, 
+ author={Maas, Philipp André}, 
+ year={2009}, 
+ journal={Vienna Journal of South Asian Studies 2009-2010}, 
+ volume={52/53 Text Genealogy, Textual Criticism and Editorial Technique (2009-2010)},
+ pages={63-119}, 
+ publisher={Austrian Academy of Sciences Press},
+ address={Vienna}, 
+ keywords={seclit}, 
+}
+
+@article{felsenstein1985,
+  author       = {Felsenstein, Joseph},
+  title        = {Confidence Limits on Phylogenies: An Approach Using the Bootstrap},
+  journal      = {Evolution},
+  year         = {1985},
+  volume       = {39},
+  pages        = {783-791},
+  keywords     = {seclit}, 
+}
+
+
+
+@article{windram2008, 
+ author={Windram, Heather F. and Shaw, Prue and Robinson, Peter and Howe, Christopher J.}, 
+ year={2008},
+ title={Dante’s Monarchia as a Test Case for the Use of Phylogenetic Methods in Stemmatic Analysis},
+ journal={Literary and Linguistic Computing},
+ volume={23(4)},
+ pages={443-463},
+ doi={doi.org/10.1093/llc/fqn023}, 
+ keywords={seclit},
+} 
+
+@inbook{stemmamethods,
+  author      = {Hoenen, Armin and Manafzadeh, Sara and Stadler, Yannick M. and Roos, Teemu and Hoenen, Armin and Guillaumin, Jean-Baptiste},
+  title       = {Computational methods and tools},
+  editor      = {van Zundert, Joris},
+  booktitle   = {Handbook of Stemmatology},
+  publisher   = {De Gruyter},
+  year        = {2020},
+  pages       = {292-356},
+  address     = {Berlin/Bosten},
+  keywords    = {seclit},
+}
+
+@inbook{baptiste2020,
+  author      = {Guillaumin, Jean-Baptiste},
+  title       = {Criticisms of digital methods},
+  booktitle   = {Handbook of Stemmatology},
+  publisher   = {De Gruyter},
+  year        = {2020},
+  pages       = {339-356},
+  address     = {Berlin/Bosten},
+  keywords    = {seclit},
+}
+
+
 @book{goraksasamhita,
   title = {Gorakṣasaṃhitā},
   editor= {Pāṃdeya, Janārdana},
@@ -3989,6 +4105,16 @@ address={Delhi},
   note={\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}; Saved on archive.org: 06.10.2023},  
   keywords={onlinesource}, 
 }
+
+@online{hyp-website, 
+  title={Haṭha Yoga Project},
+  author={James Mallinson and Jason Birch and Marc Singleton and Daniel Bevilacqua and S. V. B. K. V. Gupta}, 
+  publisher={SOAS University of London},
+  howpublished={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}}, 
+  note={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; Saved on archive.org: 04.10.2023},  
+  keywords={onlinesource}, 
+}
+
 
 @online{ngmpp,
   title = {Nepalese German Manuscript Preservation Project (NGMPP)},
