--- a/preamble.tex
+++ b/preamble.tex
@@ -12,11 +12,11 @@
 %\setcounter{secnumdepth}{2}
 % Set the depth of numbering
 %%% Hyphenation settings
-\usepackage[htt]{hyphenat}
-\hyphenation{he-lio-trope opos-sum}
-\tracingparagraphs=1
-\tolerance=1000
-\emergencystretch=3em
+%\usepackage[htt]{hyphenat}
+%\hyphenation{he-lio-trope opos-sum}
+%\tracingparagraphs=1
+%\tolerance=1000
+%\emergencystretch=3em
 %Hyphenation in Devanāgarī of the edition still missing? Probably this needs to be modified in babel-iast package? 
 
 %%% babel
@@ -169,7 +169,7 @@ bhook=\selectlanguage{english}\textbf{Testimonia:},
 lang=english,
 notelang=english,
 % bhook=\selectlanguage{english},
-bhook=\selectlanguage{english}\textbf{Analogia:},
+bhook=\selectlanguage{english}\textbf{Parallels:},
 %maxentries=4, 
 %ehook=.]
 %nosep, 
@@ -330,13 +330,14 @@ surname=Liersch]
 %\DeclareShorthand{edd}{edd.}{Lit,Erm,Sm}
 \DeclareShorthand{egoscr}{\begin{otherlanguage}{english}em.\end{otherlanguage}}{ego}
 \DeclareShorthand{egoscrconj}{conj.}{ego}
-\DeclareShorthand{sellmerconj}{SELLMER conj.}{ego}
-\DeclareShorthand{hannederconj}{HANNEDER conj.}{ego}
-\DeclareShorthand{sellmerem}{SELLMER em.}{ego}
-\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
-\DeclareShorthand{mallinsonconj}{MALLINSON conj.}{ego}
-\DeclareShorthand{birchem}{BIRCH em.}{ego}
-\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
+\DeclareShorthand{sellmerconj}{Sellmer conj.}{ego}
+\DeclareShorthand{hannederconj}{Hanneder conj.}{ego}
+\DeclareShorthand{sellmerem}{Sellmer em.}{ego}
+\DeclareShorthand{birchconj}{Birch conj.}{ego}
+\DeclareShorthand{mallinsonconj}{Mallinson conj.}{ego}
+\DeclareShorthand{mallinsonem}{Mallinson em.}{ego}
+\DeclareShorthand{birchem}{Birch em.}{ego}
+\DeclareShorthand{birchconj}{Birch conj.}{ego}
 \DeclareShorthand{egomute}{\unskip}{ego}
 
 \usepackage{xparse}
