finish everything only ackknowledgements are required and correction

--- a/intro.bib
+++ b/intro.bib
@@ -25,6 +25,14 @@ keywords       = {seclit},
   keywords  ={seclit},
 }
 
+@book{sjoman1996,
+  author    = {N.E. Sjoman},
+  title     = {The Yoga Tradition of the Mysore Palace},
+  publisher = {Abhinav Publications},
+  year      = {1996},
+  address   = {New Delhi},
+}
+
 @article{sandra2003,
    title={Phylogeny for the faint of heart: a tutorial},
    author={Baldauf, Sandra L.},
@@ -2283,6 +2291,15 @@ keywords={printsource},
    keywords={printsource},
 }
 
+@online{hargreaves2020,
+ title= {Visual Evidence for Royal Yogins},
+ author= {Hargreaves, Jacqueline},
+ year={2020},
+ publisher={The Luminescent},
+ howpublished={\url{https://www.theluminescent.org/2020/08/visual-evidence-for-royal-yogins.html}}, 
+ note={\url{https://web.archive.org/web/20240514091726/https://www.theluminescent.org/2020/08/visual-evidence-for-royal-yogins.html}; Saved on archive.org: 22.07.2024},  
+ keywords={seclit},
+ }
 
 @article{birch2014,
    title={Yoganidrā: An Understanding of the History and Context},
@@ -2381,6 +2398,39 @@ keywords={printsource},
   series={Collection Indologie 146, Haṭha Yoga Series 1},
   keywords={printsource},
 } 
+
+
+@article{sanderson2004,
+  author  = {Alexis Sanderson},
+  title   = {Religion and the State: Śaiva Officiants in the Territory of the King’s brahmanical Chaplain},
+  journal = {Indo-Iranian Journal},
+  volume  = {47},
+  year    = {2004},
+  pages   = {229--300},
+  keywords={seclit}, 
+}
+
+
+@book{jayasi1998,
+  author    = {Muhammad Jāyasī, Mālik},
+  title     = {Padmāvat: Mālik Muhammad Jāyasī Kṛt Mahākāvya},
+  editor    = {V. S. Agrawal},
+  year      = {1998},
+  publisher = {Sahitya Sadan},
+  address   = {Chirgaon},
+  keywords={printsource},
+}
+
+@incollection{mallinson2021,
+  author    = {James Mallinson},
+  title     = {Nath Yogis and their ‘Amazing Apparel’ in Early Material and Textual Sources},
+  booktitle = {Objects, Images, Stories},
+  editor    = {Francesca Orsini},
+  year      = {2021},
+  publisher = {Oxford University Press},
+  doi       = {10.1093/oso/9780190123963.003.0004},
+  keywords={seclit}, 
+}
 
 @book{mallinson2012hatha,
    title={Yoga: Haṭha Yoga},
@@ -4000,6 +4050,16 @@ address={Delhi},
   keywords={seclit}, 
 }
 
+@book{singleton2010,
+ title={Yoga Body - The Origins of Modern Posture Practice},
+ author={Singleton, Mark},
+ year={2010},
+ publisher={Oxford University Press},
+ address={New York},
+ keywords={seclit},
+ }
+
+
 @book{hevajra,
    title={Hevajratantra},
    editor={Snellgroove, David L.},
@@ -4108,7 +4168,7 @@ address={Delhi},
 
 @online{hyp-website, 
   title={Haṭha Yoga Project},
-  author={James Mallinson, Jason Birch, Marc Singleton, Daniel Bevilacqua, S. V. B. K. V. Gupta}, 
+  author={James Mallinson and Jason Birch and Marc Singleton and Daniel Bevilacqua and S. V. B. K. V. Gupta}, 
   publisher={SOAS University of London},
   howpublished={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}}, 
   note={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; Saved on archive.org: 04.10.2023},  
