--- a/preamble.tex
+++ b/preamble.tex
@@ -330,14 +330,14 @@ surname=Liersch]
 %\DeclareShorthand{edd}{edd.}{Lit,Erm,Sm}
 \DeclareShorthand{egoscr}{\begin{otherlanguage}{english}em.\end{otherlanguage}}{ego}
 \DeclareShorthand{egoscrconj}{conj.}{ego}
-\DeclareShorthand{sellmerconj}{Sellmer conj.}{ego}
-\DeclareShorthand{hannederconj}{Hanneder conj.}{ego}
-\DeclareShorthand{sellmerem}{Sellmer em.}{ego}
-\DeclareShorthand{birchconj}{Birch conj.}{ego}
-\DeclareShorthand{mallinsonconj}{Mallinson conj.}{ego}
-\DeclareShorthand{mallinsonem}{Mallinson em.}{ego}
-\DeclareShorthand{birchem}{Birch em.}{ego}
-\DeclareShorthand{birchconj}{Birch conj.}{ego}
+\DeclareShorthand{sellmerconj}{SELLMER conj.}{ego}
+\DeclareShorthand{hannederconj}{HANNEDER conj.}{ego}
+\DeclareShorthand{sellmerem}{SELLMER em.}{ego}
+\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
+\DeclareShorthand{mallinsonconj}{MALLINSON conj.}{ego}
+\DeclareShorthand{mallinsonem}{MALLINSON em.}{ego}
+\DeclareShorthand{birchem}{BIRCH em.}{ego}
+\DeclareShorthand{birchconj}{BIRCH conj.}{ego}
 \DeclareShorthand{egomute}{\unskip}{ego}
 
 \usepackage{xparse}
